# RestarauntApi

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-compose_test.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 02fcfb6f8dbd_update_tables5.py  231c753a72f6_initial_migration.py  3f85b41c111c_update_tables3.py  517308b55474_create_tables.py  54c91ea5a89c_update_tables4.py  5db2dfbbfdaf_update_tables.py  b1f33df29148_update_tables2.py
src/: celery_worker.py  config.py  database.py  dependencies.py  main.py
src/admin/: Menu.xlsx  main.py  utils.py
src/base/repositories/: __init__.py  cache.py
src/dishes/: constants.py  crud.py  models.py  repositories.py  router.py  schemas.py  services.py
src/menus/: crud.py  dependencies.py  models.py  repositories.py  router.py  schemas.py  services.py
src/submenus/: crud.py  models.py  repositories.py  router.py  schemas.py  services.py
tests/: conftest.py  data.py  test_crud_operations.py  test_dish_crud.py  test_menu_crud.py  test_submenu_crud.py
tests/router/: test_dish_crud.py  test_menu_crud.py  test_submenu_crud.py
