[tool.poetry]
name = "restaraunt-api"
version = "0.1.0"
description = ""
authors = ["Jaroslaw Miskiewicz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.19"}
alembic = "^1.11.1"
psycopg2 = "^2.9.6"
asyncpg = "^0.28.0"
pytest = "^7.4.0"
httpx = "^0.24.1"
anyio = "^3.7.1"
pytest-trio = "^0.8.0"
pytest-asyncio = "^0.21.1"
black = "^23.7.0"
mypy = "^1.4.1"
pre-commit = "^3.3.3"
types-redis = "^4.6.0.3"
redis = "^4.6.0"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
